--- a/app/src/main/res/layout/forecast_viewholder.xml
+++ b/app/src/main/res/layout/forecast_viewholder.xml
@@ -4,7 +4,10 @@
     android:layout_width="wrap_content"
     android:layout_height="140dp"
     android:layout_marginHorizontal="4dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp">
+
 
     <TextView
         android:id="@+id/nameDayTxt"
