--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,10 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <ImageView
             android:id="@+id/settingsIv"
@@ -34,15 +36,15 @@
             android:layout_height="47dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:clickable="true"
             android:contentDescription="Settings"
             android:padding="8dp"
-            android:src="@drawable/ic_settings"
-            android:clickable="true"/>
+            android:src="@drawable/ic_settings" />
 
     </com.github.matteobattilana.weather.WeatherView>
 
     <ImageView
-        android:id="@+id/addCityIv"
+        android:id="@+id/searchCityIv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -50,7 +52,7 @@
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/plus" />
+        app:srcCompat="@android:drawable/ic_menu_search" />
 
     <TextView
         android:id="@+id/cityTv"
